# SDL2-Test

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2_gfx.cmake  FindSDL2_image.cmake
include/: Canvas.hpp  RenderWindow.hpp
src/: CMakeLists.txt  Canvas.cpp  RenderWindow.cpp  main.cpp
